Closed Bug 1489632 Opened 6 years ago Closed 6 years ago

Crash in OOM | large | mozalloc_abort | mozalloc_handle_oom | moz_xmalloc | SkData::PrivateNewWithCopy

Categories

(Core :: Graphics, defect, P3)

61 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox-esr60 --- unaffected
firefox62 --- wontfix
firefox63 --- fixed
firefox64 --- fixed

People

(Reporter: philipp, Assigned: lsalzman)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is
report bp-a9ffc3fc-203e-457a-b9f2-02ad20180906.
=============================================================

Top 10 frames of crashing thread:

0 mozglue.dll mozalloc_abort memory/mozalloc/mozalloc_abort.cpp:34
1 mozglue.dll mozalloc_handle_oom memory/mozalloc/mozalloc_oom.cpp:54
2 mozglue.dll moz_xmalloc memory/mozalloc/mozalloc.cpp:72
3 xul.dll SkData::PrivateNewWithCopy gfx/skia/skia/src/core/SkData.cpp:69
4 xul.dll MakeRasterCopyPriv gfx/skia/skia/src/image/SkImage_Raster.cpp:270
5 xul.dll SkMakeImageFromRasterBitmapPriv gfx/skia/skia/src/image/SkImage_Raster.cpp:309
6 xul.dll SkMakeImageFromRasterBitmap gfx/skia/skia/src/image/SkImage_Raster.cpp:323
7 xul.dll SkImage::MakeFromBitmap gfx/skia/skia/src/image/SkImage.cpp:215
8 xul.dll SkSpecialImage_Raster::onAsImage gfx/skia/skia/src/core/SkSpecialImage.cpp:294
9 xul.dll SkBitmapDevice::drawSpecial gfx/skia/skia/src/core/SkBitmapDevice.cpp:560

=============================================================

this crash signature has been present for a while but is spiking up since the end of august for german users with quite high memory allocation sizes, so i suppose it could be related to some sort of external website change triggering this.

marcia, if you have time could you take a look if any url correlations stick out for this signature?
Flags: needinfo?(mozillamarcia.knous)
The allocations are often quite large (100+MB) and the vast majority of the crashes are on 32-bit systems. I'm not surprised such a large allocation is producing a somewhat notable crash rate on release, but I am surprised skia doesn't gracefully fail. Is there anything to be done here Lee? I'm guessing not, short of an uplift to skia, and even then, we would just stop displaying some content...
Flags: needinfo?(lsalzman)
Priority: -- → P3
When Skia is popping a layer and trying to composite it, it is temporarily copying the layer because its not immutable. But we're never going to draw to the layer again, so it really is immutable, and should be marked as such. This avoids the copy which is causing this allocation.
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Flags: needinfo?(lsalzman)
Attachment #9010405 - Flags: review?(rhunt)
Blocks: 1451845
Has Regression Range: --- → yes
Keywords: regression
Attachment #9010405 - Flags: review?(rhunt) → review+
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/25d9357b7f48
mark Skia bitmap layer as immutable before popping it. r=rhunt
Comment on attachment 9010405 [details] [diff] [review]
mark Skia bitmap layer as immutable before popping it

Approval Request Comment
[Feature/Bug causing the regression]: Bug 1451845
[User impact if declined]: Frequent OOM crashes on any site that needs layering to render.
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: not yet
[Needs manual test from QE? If yes, steps to reproduce]:  no
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]: no
[Why is the change risky/not risky?]: Just avoids an unnecessary allocation that is causing us to OOM.
[String changes made/needed]: none
Attachment #9010405 - Flags: approval-mozilla-beta?
https://hg.mozilla.org/mozilla-central/rev/25d9357b7f48
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Comment on attachment 9010405 [details] [diff] [review]
mark Skia bitmap layer as immutable before popping it

Crash fix, uplift approved for 63 beta 8, thanks.
Attachment #9010405 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: