Bug 1489632 - mark Skia bitmap layer as immutable before popping it. r=rhunt a=pascalc